--- a/index.html
+++ b/index.html
@@ -5879,7 +5879,7 @@
       <div id="preview3d" class="dialog stable" style="display: none; padding: 0px"></div>
 
       <div id="exportMapData" style="display: none" class="dialog">
-        <button onclick="saveCK3()" data-tip="Download for Crusader Kings 3">Crusader Kings 3</button>
+        <button onclick="exportCK3()" data-tip="Download for Crusader Kings 3">Crusader Kings 3</button>
 
         <div style="margin-bottom: 0.3em; font-weight: bold">Download image</div>
         <div>
@@ -8099,7 +8099,7 @@
     <script defer src="modules/io/save.js?v=1.96.00"></script>
     <script defer src="modules/io/load.js?v=1.97.04"></script>
     <script defer src="modules/io/cloud.js?v=1.96.00"></script>
-    <script defer src="modules/io/export.js?v=1.97.26"></script>
+    <script defer src="modules/io/export.js?v=1.97.27"></script>
 
     <!-- Web Components -->
     <script defer src="components/fill-box.js"></script>
