--- a/index.html
+++ b/index.html
@@ -5983,6 +5983,8 @@
       <div id="preview3d" class="dialog stable" style="display: none; padding: 0px"></div>
 
       <div id="exportMapData" style="display: none" class="dialog">
+        <button onclick="exportToCK3()" data-tip="Download for Crusader Kings 3">Crusader Kings 3</button>
+
         <div style="margin-bottom: 0.3em; font-weight: bold">Download image</div>
         <div>
           <button
