compatibility load button

--- a/index.html
+++ b/index.html
@@ -6096,6 +6096,9 @@
           <button onclick="mapToLoad.click()" data-tip="Load map file (.map or .gz) from your local disk">
             machine
           </button>
+           <button onclick="mapToLoadCompatibility.click()" data-tip="Load map file (.map or .gz) from your local disk">
+            machine (compatibility)
+          </button>
           <button
             onclick="loadURL()"
             data-tip="Load map file (.map or .gz) file from URL. Note that the server should allow CORS"
@@ -8114,7 +8117,7 @@
     <script src="modules/ui/measurers.js?v=1.99.00"></script>
     <script src="modules/ui/style-presets.js?v=1.100.00"></script>
     <script src="modules/ui/general.js?v=1.100.00"></script>
-    <script src="modules/ui/options.js?v=1.106.2"></script>
+    <script src="modules/ui/options.js?v=1.106.3"></script>
     <script src="main.js?v=1.108.2"></script>
 
     <script defer src="modules/ui/style.js?v=1.108.4"></script>
@@ -8161,7 +8164,7 @@
     <script defer src="libs/rgbquant.min.js"></script>
     <script defer src="libs/jquery.ui.touch-punch.min.js"></script>
     <script defer src="modules/io/save.js?v=1.107.4"></script>
-    <script defer src="modules/io/load.js?v=1.108.1"></script>
+    <script defer src="modules/io/load.js?v=1.108.2"></script>
     <script defer src="modules/io/cloud.js?v=1.106.0"></script>
     <script defer src="modules/io/export.js?v=1.100.03"></script>
 
