mapToLoadCompatibility file input

--- a/index.html
+++ b/index.html
@@ -6219,6 +6219,7 @@
 
     <div id="fileInputs" style="display: none">
       <input type="file" accept=".map,.gz" id="mapToLoad" />
+      <input type="file" accept=".map,.gz" id="mapToLoadCompatibility" />
       <input type="file" accept=".txt,.csv" id="burgsListToLoad" />
       <input type="file" accept=".txt" id="legendsToLoad" />
       <input type="file" accept="image/*" id="imageToLoad" />
